--- a/day1/hw/src/_app.scss
+++ b/day1/hw/src/_app.scss
@@ -9,7 +9,8 @@
 	--medium_blue: #39afc9;
 	--white_blue: #d3e5e9;
 	--white: #e0e4e7;
-	--black: rgb(0, 20, 0);
+	--black: #000d3056;
+	--max_black: #000d30;
 }
 body {
 	display: flex;
@@ -29,32 +30,87 @@ body {
 	min-height: 400px;
 	border-radius: 10px;
 	padding: 2em;
-	.input {
-		margin-bottom: 1em;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		border-radius: 5px;
-		overflow: hidden;
-		input {
-			height: 2em;
-			border-radius: 5px;
+	.taskform {
+		.newtask {
+			margin-bottom: 1em;
+			width: 10em;
+			height: 3em;
 			border: none;
 			background-color: var(--white_blue);
-			font-size: 1em;
+			border-radius: 20px;
+			filter: drop-shadow(0px 5px 4px var(--main_blue));
+			&:hover {
+				background-color: var(--main_blue);
+				border-radius: 10px;
+				filter: drop-shadow(0px 5px 4px var(--white_blue));
+				color: var(--white);
+				font-size: 1em;
+			}
 		}
-		button {
-			height: 2em;
-			border-radius: 5px;
-			border: none;
-			background-color: var(--white_blue);
-			font-size: 1em;
-			padding: 0.2em;
+		.input {
+			transition: 0.2s;
+			z-index: -1;
+			opacity: 0;
+			position: fixed;
+			top: -120%;
+			left: 0;
+			width: 100%;
+			height: 100%;
 			display: flex;
+			flex-direction: row;
 			justify-content: center;
 			align-items: center;
+			border-radius: 5px;
+			background-color: var(--black);
+			h1 {
+				position: absolute;
+				top: 1em;
+				right: 1em;
+				width: 40px;
+				height: 40px;
+				padding: 0.5em;
+				background-color: var(--white_blue);
+				border: 1px solid var(--medium_blue);
+				color: var(--main_blue);
+				border-radius: 50%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			input {
+				height: 2em;
+				border-radius: 5px;
+				border: none;
+				background-color: var(--white_blue);
+				font-size: 1em;
+			}
+			button {
+				height: 2em;
+				border-radius: 5px;
+				border: none;
+				background-color: var(--white_blue);
+				font-size: 1em;
+				padding: 0.2em;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+		.input.active {
+			transition: 0.2s;
+			z-index: 1;
+			opacity: 1;
+			position: fixed;
+			top: 0;
+			left: 0;
+			background-color: var(--black);
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			border-radius: 5px;
 		}
 	}
 	form {
@@ -70,33 +126,79 @@ body {
 }
 .light {
 	.container {
+		form {
+			.filter {
+				.menu {
+					.name {
+						color: var(--medium_blue);
+						filter: drop-shadow(0px 3px 2px var(--white));
+						&:hover {
+							color: var(--main_blue);
+							filter: drop-shadow(0px 2px 2px var(--white));
+						}
+					}
+					.btn-toggle {
+						color: var(--medium_blue);
+						filter: drop-shadow(0px 3px 2px var(--white));
+						&:hover {
+							color: var(--main_blue);
+							filter: drop-shadow(0px 2px 2px var(--white));
+						}
+					}
+				}
+			}
+		}
 		background-color: var(--white_blue);
 		outline: 1px solid var(--main_blue);
-		.input {
-			input {
-				height: 2em;
-				border-radius: 5px;
-				border: solid 1px var(--main_blue);
-				background-color: var(--white_blue);
-				font-size: 1em;
-			}
-			button {
-				height: 2em;
-				border-radius: 5px;
-				border: none;
-				background-color: var(--white_blue);
-				border: solid 1px var(--main_blue);
-				font-size: 1em;
-				padding: 0.2em;
-				display: flex;
-				justify-content: center;
-				align-items: center;
+		.taskform {
+			.input {
+				input {
+					height: 2em;
+					border-radius: 5px;
+					border: solid 1px var(--main_blue);
+					background-color: var(--white_blue);
+					font-size: 1em;
+				}
+				button {
+					height: 2em;
+					border-radius: 5px;
+					border: none;
+					background-color: var(--white_blue);
+					border: solid 1px var(--main_blue);
+					font-size: 1em;
+					padding: 0.2em;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
 			}
 		}
 	}
 }
 .dark {
 	.container {
+		form {
+			.filter {
+				.menu {
+					.name {
+						color: var(--white_blue);
+						filter: drop-shadow(0px 3px 2px var(--main_blue));
+						&:hover {
+							color: var(--white);
+							filter: drop-shadow(0px 2px 2px var(--white_blue));
+						}
+					}
+					.btn-toggle {
+						color: var(--white_blue);
+						filter: drop-shadow(0px 3px 2px var(--main_blue));
+						&:hover {
+							color: var(--white);
+							filter: drop-shadow(0px 2px 2px var(--white_blue));
+						}
+					}
+				}
+			}
+		}
 		background-color: var(--medium_blue);
 		outline: 1px solid var(--main_blue);
 	}
@@ -120,6 +222,13 @@ body {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		font-size: 1.2em;
+		color: var(--max_black);
+		gap: 2px;
+		input {
+			border: none;
+			background-color: var(--main_blue);
+		}
 	}
 }
 .list {
