--- a/day2/appchat/src/index.scss
+++ b/day2/appchat/src/index.scss
@@ -18,7 +18,7 @@ body {
 	background-color: beige;
 	color: #111;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
 	width: 0;
 	height: 0;
 }
@@ -49,6 +49,12 @@ body {
 			flex-direction: column;
 			border-radius: 20px;
 			background-color: #efefef;
+			&:nth-child(odd) {
+				align-items: flex-start;
+			}
+			&:nth-child(even) {
+				align-items: flex-end;
+			}
 			&:hover {
 				padding: 10px;
 				border-radius: 10px;
